# temuScraper

./: .gitignore  main.py  pyproject.toml
src/: api.py  bot.py  config.py  database_manager.py  model.py  parser.py
