[project]
name = "temuscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "playwright-stealth>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "selectolax>=0.3.33",
    "sqlmodel>=0.0.24",
    "temu-captcha-solver>=0.6.8",
    "uvicorn>=0.35.0",
]
